# OrdinalCalc

./: CMakeLists.txt  README.md  run_all.sh
src/: cnf_test.cpp
