CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OrdinalCalc CXX)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

ADD_SUBDIRECTORY(deps/ordinal)

SET(PROJ_SOURCES

)

SET(PROJ_INCLUDES
        
        )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

#ADD_EXECUTABLE(${PROJECT_NAME} ${PROJ_SOURCES} ${PROJ_INCLUDES})
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} ordinal)
#TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE include)
