CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OrdinalCalc CXX)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF()

ADD_SUBDIRECTORY(deps/ordinal)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

SET(CNF_TEST_SOURCES
    src/cnf_test.cpp
)

SET(CNF_TEST_INCLUDES
        )

ADD_EXECUTABLE(CNF_TEST ${CNF_TEST_SOURCES} ${CNF_TEST_INCLUDES})
TARGET_LINK_LIBRARIES(CNF_TEST ordinal)
TARGET_INCLUDE_DIRECTORIES(CNF_TEST PRIVATE include)
